[gd_scene load_steps=6 format=3 uid="uid://se3l7y0eejab"]

[ext_resource type="Script" path="res://Scripts/UI/canvas_dialogue.gd" id="1_yuwdm"]
[ext_resource type="AudioStream" uid="uid://b5vt5cf0ijm1" path="res://Assets/Audio/SFX/retro-select-236670.mp3" id="2_otaq3"]
[ext_resource type="Texture2D" uid="uid://x46a5nertpek" path="res://Assets/UI/splash_screen_godot.png" id="2_qgpie"]
[ext_resource type="FontFile" uid="uid://ckjocns7dmovv" path="res://Assets/UI/Fonts/PixelOperator8.ttf" id="2_xyuja"]
[ext_resource type="Texture2D" uid="uid://d2ylbxyhf4fdc" path="res://Assets/UI/Button_Icon.png" id="3_1qe3i"]

[node name="canvas_dialogue" type="CanvasLayer"]
script = ExtResource("1_yuwdm")
text_dialogue = ["Hello", "BYE", "WOW", "AMAZING"]

[node name="back_ground_text_image" type="TextureRect" parent="."]
offset_top = 94.0
offset_right = 160.0
offset_bottom = 144.0
texture = ExtResource("2_qgpie")
expand_mode = 1
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="back_ground_text_image"]
layout_mode = 0
offset_left = 146.0
offset_top = 37.0
offset_right = 160.0
offset_bottom = 50.0
texture = ExtResource("3_1qe3i")
expand_mode = 1

[node name="Press_text" type="Label" parent="back_ground_text_image"]
layout_mode = 0
offset_left = 122.0
offset_top = 37.0
offset_right = 148.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_xyuja")
theme_override_font_sizes/font_size = 7
text = "skip"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="message_text" type="Label" parent="."]
offset_top = 95.0
offset_right = 159.0
offset_bottom = 131.0
theme_override_fonts/font = ExtResource("2_xyuja")
theme_override_font_sizes/font_size = 8
autowrap_mode = 2

[node name="letter_timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_otaq3")
volume_db = -25.752
pitch_scale = 0.76

[node name="transition_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="letter_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="transition_timer" to="." method="_on_transition_timer_timeout"]
